testsuite/poke.pkl/funcall-def-diag-3.pk
/* { dg-do compile } */

fun def = (int a, int b, int c = 0) int:
  {
   return a + b + c;
  }

fun bar = void:
  {
   def (1); /* { dg-error "" } */
  }
